bar fixed and text aligned

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -175,7 +175,7 @@ input[type="submit"] {
 
 /* Form */
 .contact-form {
-  width: 97%;
+  width: 97.5%;
   margin: 0 auto;
   background: #fff;
 }
@@ -205,7 +205,8 @@ input[type="checkbox"] {
 
 #find-us {
   height: 10%;
-  width: 50%;
+  width: 42.7%;
+  margin-right: 70px;
 }
 
 *:focus {
